# test-try-copier

./: .copier-answers.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
tests/: main_test.py
