[project]
authors = [
    {name = "atloo1", email = "15357562+atloo1@users.noreply.github.com"},
]
dependencies = []
description = "test updating from try-copier"
license = "MIT"
name = "test-try-copier"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
